fixed alignment issue

--- a/app/styles/paths.scss
+++ b/app/styles/paths.scss
@@ -6,6 +6,7 @@
 
     .pathway {
         display: inline-block;
+        vertical-align: top;
         width: 96%;
         margin-left: 2%;
         margin-right: 2%;
